Fix feed-item gaps

--- a/_sass/jekyll-theme-collected.scss
+++ b/_sass/jekyll-theme-collected.scss
@@ -137,9 +137,9 @@ a {
     -moz-column-count: 3;
     -webkit-column-count: 3;
     column-count: 3;
-    -moz-column-gap: 1em;
-    -webkit-column-gap: 1em;
-    column-gap: 1em;
+    -moz-column-gap: 0.5em;
+    -webkit-column-gap: 0.5em;
+    column-gap: 0.5em;
 }
 
 .feed-item { /* Masonry bricks or child elements */
@@ -147,11 +147,17 @@ a {
     box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.18);
     display: inline-block;
     margin: 0 0 1em;
-    padding: 15px;
+    padding: 0px 15px;
     width: 100%;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+
+    .feed-title {
+      h3 {
+        margin-top: 1rem;
+      }
+    }
 }
 
 .main-content {
